--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 
     <div class="header">
       <h1>Discover hidden places in the world around you</h1>
-      <a href="#">Download Excursion (Coming Soon!)</a>
+      <a href="#">Download Excursion (Coming soon!)</a>
+    </div>
+
+    <div class="video">
+      <video src="./resources/excursion.mp4" autoplay>
+        Your browser does not support the video tag.
+      </video>
+    </div>
+
+    <div class="text">
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <img src="./resources/camp.jpg" alt="Deployed tents at campsite">
+      <img src="./resources/phone.png" alt="Cellphone icon">
+      <h2>Coming soon for iPhone and Android</h2>
+      <a href="#">Download Excursion (Coming soon!)</a>
+      <p>&copy; Excursion</p>
     </div>
 
 
