--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="video">
-      <video src="./resources/excursion.mp4" autoplay loop>
+      <video src="./resources/videos/excursion.mp4" autoplay loop>
         Your browser does not support the video tag.
       </video>
     </div>
@@ -21,8 +21,8 @@
     <div class="text">
       <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-      <img src="./resources/camp.jpg" alt="Deployed tents at campsite">
-      <img src="./resources/phone.png" alt="Cellphone icon">
+      <p><img src="./resources/images/camp.jpg" alt="Deployed tents at campsite"></p>
+      <p><img src="./resources/images/phone.png" alt="Cellphone icon"></p>
       <h2>Coming soon for iPhone and Android</h2>
       <a href="#">Download Excursion (Coming soon!)</a>
       <p>&copy; Excursion</p>
