--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <div class="header">
       <h1>Discover hidden places in the world around you</h1>
-      <a href="#">Download Excursion (Coming soon!)</a>
+      <a href="#" class="link">Download Excursion (Coming soon!)</a>
     </div>
 
     <div class="video">
@@ -24,8 +24,8 @@
       <p><img src="./resources/images/camp.jpg" alt="Deployed tents at campsite"></p>
       <p><img src="./resources/images/phone.png" alt="Cellphone icon"></p>
       <h2>Coming soon for iPhone and Android</h2>
-      <a href="#">Download Excursion (Coming soon!)</a>
-      <p>&copy; Excursion</p>
+      <a href="#" class="link">Download Excursion (Coming soon!)</a>
+      <p class="copyright">&copy; Excursion</p>
     </div>
 
 
