--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="video">
-      <video src="./resources/videos/excursion.mp4" autoplay loop>
+      <video src="./resources/videos/excursion.mp4" autoplay loop muted>
         Your browser does not support the video tag.
       </video>
     </div>
